--- a/Auto_Turret/Auto_Turret/Auto_Turret.csproj
+++ b/Auto_Turret/Auto_Turret/Auto_Turret.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateSummary.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateSummary.Designer.cs">
+      <DependentUpon>CreateSummary.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataBaseAccessController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -66,6 +72,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BuildQueryStatement.cs" />
     <Compile Include="TurretnameEventtypeEventtimeData.cs" />
+    <EmbeddedResource Include="CreateSummary.resx">
+      <DependentUpon>CreateSummary.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
